@@ -1,4 +1,7 @@
 2003-01-01 Vaclav Haisman <V.Haisman@sh.cvut.cz>
+	* lexan.lex, csynan.y: Nove soubory.
+	
+2003-01-01 Vaclav Haisman <V.Haisman@sh.cvut.cz>
         * ast.hxx, ast.cxx: Commit pred zmenou na autoconf.
 
 2002-12-13 Vaclav Haisman <V.Haisman@sh.cvut.cz>
